<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" 
xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  
  <groupId>com.organization.vikram_wunderlist</groupId>
  <artifactId>myProjectArtifactID</artifactId>
  <version>0.0.1-SNAPSHOT</version>
  
  <name>My Project Name</name>
  <description>Vikram's project POC Serenity + Cucumber + Wunderlist</description>
  
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <serenity.version>1.5.3</serenity.version>                       <!-- https://search.maven.org/#search%7Cga%7C1%7Ca%3A%22serenity-core%22 -->
        <serenity.maven.version>1.5.3</serenity.maven.version>  <!--  https://search.maven.org/#search%7Cga%7C1%7Cserenity%20maven -->
        <serenity.cucumber.version>1.5.4</serenity.cucumber.version>
    </properties>

    <!-- Define the Bintray repos for convenience -->
    <repositories>
        <repository>
            <id>serenity</id>
            <name>bintray</name>
            <url>http://dl.bintray.com/serenity/maven</url>
        </repository>
    </repositories>
    <pluginRepositories>
        <pluginRepository>
            <id>serenity</id>
            <name>bintray-plugins</name>
            <url>http://dl.bintray.com/serenity/maven</url>
        </pluginRepository>
    </pluginRepositories>

    <dependencies>
        <dependency>
            <groupId>net.serenity-bdd</groupId>
            <artifactId>serenity-core</artifactId>
            <version>${serenity.version}</version>
        </dependency>
        <dependency>
            <groupId>net.serenity-bdd</groupId>
            <artifactId>serenity-junit</artifactId>
            <version>${serenity.version}</version>
        </dependency>
        <dependency>
            <groupId>net.serenity-bdd</groupId>
            <artifactId>serenity-rest-assured</artifactId>
            <version>${serenity.version}</version>
        </dependency>
        <dependency>
            <groupId>net.serenity-bdd</groupId>
            <artifactId>serenity-cucumber</artifactId>
            <version>${serenity.cucumber.version}</version>
        </dependency>
        <dependency>
            <groupId>org.slf4j</groupId>
            <artifactId>slf4j-simple</artifactId>
            <version>1.6.1</version>
        </dependency>
        <dependency>
            <groupId>org.codehaus.groovy</groupId>
            <artifactId>groovy-all</artifactId>
            <version>1.8.6</version>
        </dependency>
        <dependency>
            <groupId>junit</groupId>
            <artifactId>junit</artifactId>
            <version>4.12</version>
            <scope>test</scope>
        </dependency>
        <dependency>
            <groupId>com.googlecode.lambdaj</groupId>
            <artifactId>lambdaj</artifactId>
            <version>2.3.3</version>
        </dependency>
        <dependency>
            <groupId>org.assertj</groupId>
            <artifactId>assertj-core</artifactId>
            <version>1.7.0</version>
            <scope>test</scope>
        </dependency>
        <dependency>
	        <groupId>commons-collections</groupId>
	        <artifactId>commons-collections</artifactId>
	        <version>3.2.2</version>
        </dependency>
     </dependencies>
    
    <build>
        <plugins>
                <!--  Method 1 for parallel run -->
                 <!-- <plugin>
		                <groupId>org.apache.maven.plugins</groupId>
		                <artifactId>maven-surefire-plugin</artifactId>
		                <version>2.20</version>
		                <configuration>
			                <includes>
		                        <include>**/cucumber/*.java</include>
		                    </includes>
		                    <testFailureIgnore>true</testFailureIgnore>
		                    <parallel>classes</parallel>
		                    <threadCount>1</threadCount>
		                    <skip>${skip.parallel}</skip>
		                </configuration>
                </plugin> -->
         
                <!--  Method 2 for parallel run -->
	            <plugin>
	                <groupId>org.apache.maven.plugins</groupId>
	                <artifactId>maven-failsafe-plugin</artifactId>
	                <version>2.20</version>
	                <configuration>
	                   <includes>
	                        <include>**/cucumber/*.java</include>
	                    </includes>
	                    <!-- http://stackoverflow.com/questions/32987998/junit-and-surefire-parallel-tests-forkcount-threadcount -->
	                    <parallel>classes</parallel>
	                    <threadCount>1</threadCount>
	                    <reuseForks>${run.parallel}</reuseForks>
	                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
	                    <systemPropertyVariables>
	                        <tags>${tags}</tags>
	                    </systemPropertyVariables>
	                </configuration>
	                <executions>
	                    <execution>
	                        <goals>
	                            <goal>integration-test</goal>
	                            <goal>verify</goal>
	                        </goals>
	                    </execution>
	                </executions>
	            </plugin>
	            
	            <plugin>
	                <groupId>org.apache.maven.plugins</groupId>
	                <artifactId>maven-compiler-plugin</artifactId>
	                <version>3.2</version>
	                <configuration>
	                    <source>1.8</source>
	                    <target>1.8</target>
	                </configuration>
               </plugin>
               <plugin>
	                <groupId>net.serenity-bdd.maven.plugins</groupId>
	                <artifactId>serenity-maven-plugin</artifactId>
	                <version>${serenity.maven.version}</version>
	                <dependencies>
	                  <dependency>
	                    <groupId>net.serenity-bdd</groupId>
	                    <artifactId>serenity-core</artifactId>
	                    <version>${serenity.version}</version>
	                  </dependency>
	                </dependencies>
	                <executions>
	                    <execution>
	                        <id>serenity-reports</id>
	                        <phase>post-integration-test</phase>
	                        <goals>
	                            <goal>aggregate</goal>
	                        </goals>
	                    </execution>
	                </executions>
             </plugin>
        </plugins>
    </build>
  
</project>